# snake

./: CMakeLists.txt  README.md
include/: AI.h  Apple.h  Entity.h  Segment.h  Snake.h  constants.h  glyphs.h  utilities.h
src/: AI.cpp  Apple.cpp  CMakeLists.txt  Segment.cpp  Snake.cpp  main.cpp
